--- a/lovelace-migration/config.json
+++ b/lovelace-migration/config.json
@@ -4,7 +4,7 @@
     "slug": "lovelace-migration",
     "description": "Automatically convert your existing UI to the new Lovelace UI",
     "url": "https://github.com/hassio-addons/addon-lovelace-migration",
-    "startup": "application",
+    "startup": "runonce",
     "arch": [
         "aarch64",
         "amd64",
