:shirt: Improves log output

--- a/lovelace-migration/config.json
+++ b/lovelace-migration/config.json
@@ -15,9 +15,9 @@
     "hassio_api": true,
     "homeassistant_api": true,
     "map": [
-      "config:rw",
-      "share:rw",
-      "backup:rw"
+        "config:rw",
+        "share:rw",
+        "backup:rw"
     ],
     "options": {
         "log_level": "info",
@@ -28,7 +28,14 @@
     "schema": {
         "log_level": "match(^(trace|debug|info|notice|warning|error|fatal)$)",
         "output": "str",
-        "init_commands": ["str"],
-        "post_commands": ["str"]
+        "init_commands": [
+            "str"
+        ],
+        "post_commands": [
+            "str"
+        ]
+    },
+    "environment": {
+        "LOG_FORMAT": "{LEVEL}: {MESSAGE}"
     }
-  }
+}
