--- a/.github/support.yml
+++ b/.github/support.yml
@@ -12,7 +12,7 @@ supportComment: >
   However, this issue appears to be a support request. Please use our
   support channels to get help with the project.
 
-  Head over to the [Home Assistant community forum](https://community.home-assistant.io/?u=frenck)
+  Head over to the [Home Assistant community forum](https://community.home-assistant.io/t/community-hass-io-add-on-lovelace-migration/61552?u=dale3h)
   or join our [Discord](https://discord.gg/c5DvZ4e) chat.
 
 # Close issues marked as support requests
