--- a/.github/support.yml
+++ b/.github/support.yml
@@ -13,7 +13,7 @@ supportComment: >
   support channels to get help with the project.
 
   Head over to the [Home Assistant community forum](https://community.home-assistant.io/t/community-hass-io-add-on-lovelace-migration/61552?u=dale3h)
-  or join our [Discord](https://discord.gg/c5DvZ4e) chat.
+  or join our [Discord](https://discord.me/hassioaddons) chat.
 
 # Close issues marked as support requests
 close: true
