--- a/lovelace-migration/config.json
+++ b/lovelace-migration/config.json
@@ -13,6 +13,7 @@
     ],
     "boot": "manual",
     "hassio_api": true,
+    "hassio_role": "default",
     "homeassistant_api": true,
     "map": [
         "config:rw",
